# sabench

./: .coverage  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  REMOVED_PATHS.txt  REMOVE_FILES.txt  coverage.xml  pixi.toml  pyproject.toml  test_repo.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: ENGINEERING_MANIFEST.md  MEMORY.md  SESSION_STATUS.md
docs/manuscripts/: bounds_memo_v22.bib  bounds_memo_v22.tex  noncommutativity.bib  noncommutativity_detailed.tex
docs/paper/: paper.bib  paper.md
notebooks/: 02_noncommutativity_grid_analysis.ipynb  03_bounds_theorem_grid_analysis.ipynb  bounds_theorem_grid_analysis.ipynb  demo.ipynb  noncommutativity_grid_analysis.ipynb
sabench/: __init__.py  _base.py
sabench/analysis/: __init__.py  bounds.py  bounds_grid.py  estimators.py  grid.py  noncommutativity.py
sabench/benchmarks/: __init__.py  base.py  registry.py  types.py
sabench/benchmarks/functional/: __init__.py  epidemic_sir.py
sabench/benchmarks/scalar/: chemical_reactor.py  corner_peak.py  detpep8d.py  ishigami.py  moon_herrera.py  morris.py  oakley_ohagan.py  otl_circuit.py  piston.py  rosenbrock.py  sobol_g.py  wing_weight.py
sabench/benchmarks/spatial/: campbell2d.py  campbell2d_exp.py  campbell3d.py
sabench/functional/: boussinesq.py  damped_oscillator.py  epidemic_sir.py  heat_diffusion.py  lorenz96.py  lotka_volterra.py  pharmacokinetics.py
sabench/metadata/: __init__.py  benchmarks_metadata.json  benchmarks_registry_metadata.json  exports.py  transforms_metadata.json  transforms_registry_metadata.json
sabench/plotting/: __init__.py  maps.py
sabench/sampling/: __init__.py  saltelli.py
sabench/scalar/: __init__.py  additive_quadratic.py  borehole.py  chemical_reactor.py  corner_peak.py  detpep8d.py  environ.py  friedman.py  ishigami.py  linear.py  moon_herrera.py  morris.py  oakley_ohagan.py  otl_circuit.py  piston.py  polynomial_chaos.py  product_peak.py  rosenbrock.py  sobol_g.py  wing_weight.py
sabench/spatial/: __init__.py  campbell2d.py  campbell2d_exp.py  campbell3d.py
sabench/tests/: test_benchmark_registry.py  test_benchmarks_architecture.py  test_estimators.py  test_functional.py  test_sampling.py  test_scalar.py  test_spatial.py  test_transform_module_split.py  test_transform_registry.py  test_transforms.py  test_transforms_expanded.py
sabench/transforms/: __init__.py  aggregation.py  base.py  catalog.py  ecological.py  engineering.py  environmental.py  evaluation.py  field_ops.py  financial.py  linear.py  mathematical.py  nonlinear.py  pharmacological.py  pointwise.py  registry.py  samplewise.py  statistical.py  transforms.py  types.py  utilities.py
scripts/: build_source_bundle.py  check_built_distribution.py  fix_noncomm_grid_cell4.py  fix_notebooks.py  rewrite_notebook_docs.py
tests/analysis/: test_bounds.py  test_bounds_grid.py  test_noncommutativity.py  test_noncommutativity_grid.py  test_transforms_utilities.py
tests/benchmarks/: test_base_module.py  test_benchmark_tests_layout.py  test_benchmark_type_contracts.py  test_functional_family_layout.py  test_registry.py  test_scalar.py  test_scalar_family_layout.py  test_spatial_family_layout.py
tests/integration/: test_bounds_theorem_grid_notebook.py  test_ci_workflow_alignment.py  test_gate_contract_alignment.py  test_noncommutativity_grid_notebook.py  test_registry_metadata_exports.py  test_root_api_narrow.py  test_runtime_package_has_no_tests.py  test_source_bundle_hygiene.py
tests/transforms/: test_transform_field_ops_layout.py  test_transform_module_split.py  test_transform_registry.py  test_transform_registry_contract.py  test_transform_tests_layout.py  test_transform_utilities_layout.py  test_transforms.py  test_transforms_expanded.py
